Stop text wrap on info elements

--- a/less/tah-hud.less
+++ b/less/tah-hud.less
@@ -251,10 +251,11 @@
       align-items: center;
       display: flex;
       gap: var(--tah-gap);
-      
+
       .tah-info {
         color: var(--tah-text-secondary-color);
         font-size: @tah-info-font-size;
+        white-space: nowrap;
 
         &.tah-spotlight {
           color: var(--tah-text-tertiary-color);
